# vinur

./: .gitignore  LICENSE  NOTICE  README.md  VINUR-CONF-01_conflict_relations_spec.md  VINUR-LEX-01_alias_lexicon_matcher_spec.md  VINUR-OPS-01_op_annotation_surface_spec.md  VINUR-STAT-01_corpus_statistics_pass_spec.md  VINUR-UI-01_panel_redesign_plan.md  adjudicate.sh  config.example.toml  distill.sh  egress.toml  env.sh  ingest.sh  install.sh  pyproject.toml  requirements.txt  reset.sh  run-reranker.sh  run.sh  vinur.sh
docs/: net-inventory.md
eval/: README.md  gold.jsonl
knowledgehost/: __init__.py  __main__.py  adjudicate.py  ann.py  atomic.py  autopilot.py  bundles.py  causenet.py  chunk.py  conceptnet.py  config.py  conflict.py  corpstats.py  dbcrypt.py  dedupe.py  distill.py  downloads.py  embed.py  evalharness.py  extractor_prompts.md  facets.py  glucose.py  grounding.py  help.json  ingest.py  kb.py  lex.py  licensing.py  link.py  lm_lease.py  metrics.py  modelfind.py  ops.py  posture.py  query.py  reconcile.py  reconcile_import.py  refine.py  rerank.py  research.py  (+12 more)
knowledgehost/amiga_net/: __init__.py  audit.py  broker.py  policy.py  pull.py  status.py
knowledgehost/sources/: __init__.py  epub.py  html.py  pdf.py  text.py  wikipedia.py
scripts/: gates.sh  net_inventory.py
serving/: README.md  pyproject.toml
tests/: amiga_net_test.py  autopilot_test.py  brains_test.py  conflict_acceptance.py  dedupe_test.py  deps_test.py  high_stakes_test.py  import_filters_test.py  lex_acceptance.py  make_fixtures.sh  metrics_test.py  modelfind_test.py  ops_annotate_test.py  posture_test.py  smoke.py  standalone_test.py  stat_acceptance.py  stub_llama.py  swap_live.sh  swap_test.py  typed_cards_test.py  unimport_test.py
